<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xumeng.leadscreen.MainLeadScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/choose"
            android:id="@+id/textView"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/www"
            android:backgroundTint="@android:color/white"
            android:text="@string/whwToScreen"
            android:layout_below="@+id/textView"
            android:onClick="openWHWScreen"
            android:textAllCaps="false"
            android:textSize="16sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/leadLevel"
            android:backgroundTint="@android:color/white"
            android:text="@string/manageLevels"
            android:layout_below="@+id/www"
            android:onClick="openLevelScreen"
            android:textAllCaps="false"
            android:textSize="16sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signs"
            android:backgroundTint="@android:color/white"
            android:text="@string/symptoms"
            android:layout_below="@+id/leadLevel"
            android:onClick="openSymptomsScreen"
            android:textAllCaps="false"
            android:textSize="16sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/riskSurvey"
            android:backgroundTint="@android:color/white"
            android:text="@string/risksurvey"
            android:layout_below="@+id/signs"
            android:onClick="openSurveyScreen"
            android:textAllCaps="false"
            android:textSize="16sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/highEvaluation"
            android:backgroundTint="@android:color/white"
            android:text="@string/evaluation"
            android:layout_below="@+id/riskSurvey"
            android:onClick="openEvaluationScreen"
            android:textAllCaps="false"
            android:textSize="16sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/differGuideline"
            android:text="@string/guideline"
            android:layout_below="@+id/highEvaluation"
            android:onClick="openGuideLineScreen"
            android:backgroundTint="@android:color/white"
            android:textAllCaps="false"
            android:textSize="16sp"/>

    </RelativeLayout>

</FrameLayout>
